y.output
Terminals unused in grammar

    GEQ
    LEQ
    FOR
    LOOP
    RETURN
    BREAK
    ARROW
    IN
    DOTDOT
    IDENT


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: FunctionDeclStmt
    5                | NEWLINE

    6 $@1: ε

    7 FunctionDeclStmt: FUNC ID '(' ')' $@1 Block

    8 StatementList: ε
    9              | StatementList Statement

   10 Statement: VarDeclStmt
   11          | AssignmentStmt
   12          | IfStmt
   13          | WhileStmt
   14          | PrintStmt
   15          | PrintlnStmt
   16          | Block
   17          | ExpressionStmt

   18 Type: INT
   19     | FLOAT
   20     | STR
   21     | '&' STR
   22     | BOOL
   23     | '[' Type ';' INT_LIT ']'

   24 VarDeclStmt: LET ID '=' Expression ';'
   25            | LET ID ':' Type '=' Expression ';'
   26            | LET ID ':' Type ';'
   27            | LET MUT ID ':' Type '=' Expression ';'
   28            | LET MUT ID ':' Type ';'
   29            | LET MUT ID '=' Expression ';'

   30 AssignmentStmt: ID '=' Expression ';'
   31               | ID ADD_ASSIGN Expression ';'
   32               | ID SUB_ASSIGN Expression ';'
   33               | ID MUL_ASSIGN Expression ';'
   34               | ID DIV_ASSIGN Expression ';'
   35               | ID REM_ASSIGN Expression ';'

   36 IfStmt: IF Expression Block
   37       | IF Expression Block ELSE Block

   38 WhileStmt: WHILE Expression Block

   39 ExpressionList: Expression
   40               | ExpressionList ',' Expression

   41 PrintStmt: PRINT Expression ';'

   42 PrintlnStmt: PRINTLN Expression ';'

   43 $@2: ε

   44 Block: '{' $@2 StatementList '}'

   45 ExpressionStmt: Expression ';'

   46 Expression: OrExpr

   47 OrExpr: OrExpr LOR AndExpr
   48       | AndExpr

   49 AndExpr: AndExpr LAND RelExpr
   50        | RelExpr

   51 RelExpr: AddExpr '>' AddExpr
   52        | AddExpr '<' AddExpr
   53        | AddExpr LSHIFT AddExpr
   54        | AddExpr RSHIFT AddExpr
   55        | AddExpr EQL AddExpr
   56        | AddExpr NEQ AddExpr
   57        | AddExpr

   58 AddExpr: AddExpr '+' MulExpr
   59        | AddExpr '-' MulExpr
   60        | MulExpr

   61 MulExpr: MulExpr '*' UnaryExpr
   62        | MulExpr '/' UnaryExpr
   63        | MulExpr '%' UnaryExpr
   64        | AsExpr

   65 AsExpr: UnaryExpr AS Type
   66       | UnaryExpr

   67 UnaryExpr: '-' UnaryExpr
   68          | '!' UnaryExpr
   69          | Primary

   70 Primary: '"' STRING_LIT '"'
   71        | '"' '"'
   72        | INT_LIT
   73        | FLOAT_LIT
   74        | TRUE
   75        | FALSE
   76        | ID
   77        | ArrayIndexExpr
   78        | '[' ExpressionList ']'
   79        | '(' Expression ')'

   80 ArrayIndexExpr: ID '[' INT_LIT ']'


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 68
    '"' (34) 70 71
    '%' (37) 63
    '&' (38) 21
    '(' (40) 7 79
    ')' (41) 7 79
    '*' (42) 61
    '+' (43) 58
    ',' (44) 40
    '-' (45) 59 67
    '/' (47) 62
    ':' (58) 25 26 27 28
    ';' (59) 23 24 25 26 27 28 29 30 31 32 33 34 35 41 42 45
    '<' (60) 52
    '=' (61) 24 25 27 29 30
    '>' (62) 51
    '[' (91) 23 78 80
    ']' (93) 23 78 80
    '{' (123) 44
    '}' (125) 44
    error (256)
    LET (258) 24 25 26 27 28 29
    MUT (259) 27 28 29
    NEWLINE (260) 5
    INT (261) 18
    FLOAT (262) 19
    BOOL (263) 22
    STR (264) 20 21
    TRUE (265) 74
    FALSE (266) 75
    GEQ (267)
    LEQ (268)
    EQL (269) 55
    NEQ (270) 56
    LOR (271) 47
    LAND (272) 49
    ADD_ASSIGN (273) 31
    SUB_ASSIGN (274) 32
    MUL_ASSIGN (275) 33
    DIV_ASSIGN (276) 34
    REM_ASSIGN (277) 35
    IF (278) 36 37
    ELSE (279) 37
    FOR (280)
    WHILE (281) 38
    LOOP (282)
    PRINT (283) 41
    PRINTLN (284) 42
    FUNC (285) 7
    RETURN (286)
    BREAK (287)
    ARROW (288)
    AS (289) 65
    IN (290)
    DOTDOT (291)
    RSHIFT (292) 54
    LSHIFT (293) 53
    INT_LIT <i_val> (294) 23 72 80
    FLOAT_LIT <f_val> (295) 73
    STRING_LIT <s_val> (296) 70
    IDENT <s_val> (297)
    ID <s_val> (298) 7 24 25 26 27 28 29 30 31 32 33 34 35 76 80
    LOWER_THAN_ASSIGN (299)
    LOWER_THAN_ELSE (300)


Nonterminals, with rules where they appear

    $accept (66)
        on left: 0
    Program (67)
        on left: 1
        on right: 0
    GlobalStatementList (68)
        on left: 2 3
        on right: 1 2
    GlobalStatement (69)
        on left: 4 5
        on right: 2 3
    FunctionDeclStmt (70)
        on left: 7
        on right: 4
    $@1 (71)
        on left: 6
        on right: 7
    StatementList (72)
        on left: 8 9
        on right: 9 44
    Statement (73)
        on left: 10 11 12 13 14 15 16 17
        on right: 9
    Type <s_val> (74)
        on left: 18 19 20 21 22 23
        on right: 23 25 26 27 28 65
    VarDeclStmt <type> (75)
        on left: 24 25 26 27 28 29
        on right: 10
    AssignmentStmt (76)
        on left: 30 31 32 33 34 35
        on right: 11
    IfStmt (77)
        on left: 36 37
        on right: 12
    WhileStmt (78)
        on left: 38
        on right: 13
    ExpressionList <type> (79)
        on left: 39 40
        on right: 40 78
    PrintStmt <type> (80)
        on left: 41
        on right: 14
    PrintlnStmt <type> (81)
        on left: 42
        on right: 15
    Block (82)
        on left: 44
        on right: 7 16 36 37 38
    $@2 (83)
        on left: 43
        on right: 44
    ExpressionStmt (84)
        on left: 45
        on right: 17
    Expression <type> (85)
        on left: 46
        on right: 24 25 27 29 30 31 32 33 34 35 36 37 38 39 40 41 42 45 79
    OrExpr <type> (86)
        on left: 47 48
        on right: 46 47
    AndExpr <type> (87)
        on left: 49 50
        on right: 47 48 49
    RelExpr <type> (88)
        on left: 51 52 53 54 55 56 57
        on right: 49 50
    AddExpr <type> (89)
        on left: 58 59 60
        on right: 51 52 53 54 55 56 57 58 59
    MulExpr <type> (90)
        on left: 61 62 63 64
        on right: 58 59 60 61 62 63
    AsExpr <type> (91)
        on left: 65 66
        on right: 64
    UnaryExpr <type> (92)
        on left: 67 68 69
        on right: 61 62 63 65 66 67 68
    Primary <type> (93)
        on left: 70 71 72 73 74 75 76 77 78 79
        on right: 69
    ArrayIndexExpr <type> (94)
        on left: 80
        on right: 77


State 0

    0 $accept: • Program $end

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    Program              go to state 3
    GlobalStatementList  go to state 4
    GlobalStatement      go to state 5
    FunctionDeclStmt     go to state 6


State 1

    5 GlobalStatement: NEWLINE •

    $default  reduce using rule 5 (GlobalStatement)


State 2

    7 FunctionDeclStmt: FUNC • ID '(' ')' $@1 Block

    ID  shift, and go to state 7


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 8


State 4

    1 Program: GlobalStatementList •
    2 GlobalStatementList: GlobalStatementList • GlobalStatement

    NEWLINE  shift, and go to state 1
    FUNC     shift, and go to state 2

    $default  reduce using rule 1 (Program)

    GlobalStatement   go to state 9
    FunctionDeclStmt  go to state 6


State 5

    3 GlobalStatementList: GlobalStatement •

    $default  reduce using rule 3 (GlobalStatementList)


State 6

    4 GlobalStatement: FunctionDeclStmt •

    $default  reduce using rule 4 (GlobalStatement)


State 7

    7 FunctionDeclStmt: FUNC ID • '(' ')' $@1 Block

    '('  shift, and go to state 10


State 8

    0 $accept: Program $end •

    $default  accept


State 9

    2 GlobalStatementList: GlobalStatementList GlobalStatement •

    $default  reduce using rule 2 (GlobalStatementList)


State 10

    7 FunctionDeclStmt: FUNC ID '(' • ')' $@1 Block

    ')'  shift, and go to state 11


State 11

    7 FunctionDeclStmt: FUNC ID '(' ')' • $@1 Block

    $default  reduce using rule 6 ($@1)

    $@1  go to state 12


State 12

    7 FunctionDeclStmt: FUNC ID '(' ')' $@1 • Block

    '{'  shift, and go to state 13

    Block  go to state 14


State 13

   44 Block: '{' • $@2 StatementList '}'

    $default  reduce using rule 43 ($@2)

    $@2  go to state 15


State 14

    7 FunctionDeclStmt: FUNC ID '(' ')' $@1 Block •

    $default  reduce using rule 7 (FunctionDeclStmt)


State 15

   44 Block: '{' $@2 • StatementList '}'

    $default  reduce using rule 8 (StatementList)

    StatementList  go to state 16


State 16

    9 StatementList: StatementList • Statement
   44 Block: '{' $@2 StatementList • '}'

    LET        shift, and go to state 17
    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    IF         shift, and go to state 20
    WHILE      shift, and go to state 21
    PRINT      shift, and go to state 22
    PRINTLN    shift, and go to state 23
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 27
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '{'        shift, and go to state 13
    '}'        shift, and go to state 30
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    Statement       go to state 33
    VarDeclStmt     go to state 34
    AssignmentStmt  go to state 35
    IfStmt          go to state 36
    WhileStmt       go to state 37
    PrintStmt       go to state 38
    PrintlnStmt     go to state 39
    Block           go to state 40
    ExpressionStmt  go to state 41
    Expression      go to state 42
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 17

   24 VarDeclStmt: LET • ID '=' Expression ';'
   25            | LET • ID ':' Type '=' Expression ';'
   26            | LET • ID ':' Type ';'
   27            | LET • MUT ID ':' Type '=' Expression ';'
   28            | LET • MUT ID ':' Type ';'
   29            | LET • MUT ID '=' Expression ';'

    MUT  shift, and go to state 52
    ID   shift, and go to state 53


State 18

   74 Primary: TRUE •

    $default  reduce using rule 74 (Primary)


State 19

   75 Primary: FALSE •

    $default  reduce using rule 75 (Primary)


State 20

   36 IfStmt: IF • Expression Block
   37       | IF • Expression Block ELSE Block

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    Expression      go to state 55
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 21

   38 WhileStmt: WHILE • Expression Block

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    Expression      go to state 56
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 22

   41 PrintStmt: PRINT • Expression ';'

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    Expression      go to state 57
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 23

   42 PrintlnStmt: PRINTLN • Expression ';'

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    Expression      go to state 58
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 24

   70 Primary: '"' • STRING_LIT '"'
   71        | '"' • '"'

    '"'         shift, and go to state 59
    STRING_LIT  shift, and go to state 60


State 25

   72 Primary: INT_LIT •

    $default  reduce using rule 72 (Primary)


State 26

   73 Primary: FLOAT_LIT •

    $default  reduce using rule 73 (Primary)


State 27

   30 AssignmentStmt: ID • '=' Expression ';'
   31               | ID • ADD_ASSIGN Expression ';'
   32               | ID • SUB_ASSIGN Expression ';'
   33               | ID • MUL_ASSIGN Expression ';'
   34               | ID • DIV_ASSIGN Expression ';'
   35               | ID • REM_ASSIGN Expression ';'
   76 Primary: ID •
   80 ArrayIndexExpr: ID • '[' INT_LIT ']'

    ADD_ASSIGN  shift, and go to state 61
    SUB_ASSIGN  shift, and go to state 62
    MUL_ASSIGN  shift, and go to state 63
    DIV_ASSIGN  shift, and go to state 64
    REM_ASSIGN  shift, and go to state 65
    '='         shift, and go to state 66
    '['         shift, and go to state 67

    $default  reduce using rule 76 (Primary)


State 28

   79 Primary: '(' • Expression ')'

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    Expression      go to state 68
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 29

   78 Primary: '[' • ExpressionList ']'

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    ExpressionList  go to state 69
    Expression      go to state 70
    OrExpr          go to state 43
    AndExpr         go to state 44
    RelExpr         go to state 45
    AddExpr         go to state 46
    MulExpr         go to state 47
    AsExpr          go to state 48
    UnaryExpr       go to state 49
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 30

   44 Block: '{' $@2 StatementList '}' •

    $default  reduce using rule 44 (Block)


State 31

   67 UnaryExpr: '-' • UnaryExpr

    TRUE       shift, and go to state 18
    FALSE      shift, and go to state 19
    '"'        shift, and go to state 24
    INT_LIT    shift, and go to state 25
    FLOAT_LIT  shift, and go to state 26
    ID         shift, and go to state 54
    '('        shift, and go to state 28
    '['        shift, and go to state 29
    '-'        shift, and go to state 31
    '!'        shift, and go to state 32

    UnaryExpr       go to state 71
    Primary         go to state 50
    ArrayIndexExpr  go to state 51


State 32

   68 UnaryExpr: '!' • UnaryExpr
